5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1764_672.log
== TEST (2019-05-21 17:05:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
n= ones (6, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n= ones (6, dtype=int)
NameError: name 'ones' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:05:32) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
n = ones (6, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = ones (6, dtype=int)
NameError: name 'ones' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:05:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
n = ones(6, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = ones(6, dtype=int)
NameError: name 'ones' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:06:32) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
from numpy import*
n = ones(6, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:06:38) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
from numpy import*
n = ones(6, dtype=int)
print(n)
-- EXECUTION TIME:
0.489155
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:06:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
from numpy import*
n = ones(6, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:07:02) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
from numpy import*
n = ones(6, dtype=int)
print(n)
-- EXECUTION TIME:
0.567134
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:08:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
from numpy import*
n = ones(6, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:08:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
from numpy import*
n = ones(6, dtype=int)
print(n)
-- EXECUTION TIME:
0.386335
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:16:02) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
from numpy import*
n = ones(6, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:16:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
from numpy import*
n = ones(6, dtype=int)
print(n)
-- EXECUTION TIME:
0.502847
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:16:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
from numpy import*
n = ones(6, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:16:12) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
from numpy import*
n = ones(6, dtype=int)
print(n)
-- EXECUTION TIME:
0.534001
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:32:25) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
from numpy import*
n = ones(6, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:34:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
from numpy import*
v = int(input(":"))
n = ones(6, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:34:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
from numpy import*
n= int(input(":"))
n= ones(6, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:34:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpyn
from numpy import*
n= int(input(":"))
n= ones(n, dtype=int)
print(n)
-- EXECUTION TIME:
0.373021
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
